# end-to-end-ml-dengue-patient-classification

./: README.md  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
dengue_classification/: __init__.py
dengue_classification/exception/: __init__.py
dengue_classification/utils/: main_utils.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  undill
notebooks/: eda.ipynb  eda_classifier.ipynb  mongodb_test.ipynb  preprocessor_safe.pkl  rf_dengue_model.pkl
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
